--- a/data/blog/uptime-website.mdx
+++ b/data/blog/uptime-website.mdx
@@ -12,6 +12,6 @@ authors: ['default']
 
 ![screenshot](/static/images/uptime.png)
 
-Saya membuat website [Uptime](http://uptime.vahryiskandar.my.id/) untuk website saya untuk memantai aktifits website saya seperti terjadinya down atau mati. Saya membuatnya menggunakan [Upptime](https://upptime.js.org/) untuk membuatnya, ini sangat meudah karena tidak memerlukan hosting hanya perlu akun github
+Saya membuat website [Uptime](http://uptime.vahryiskandar.my.id/) untuk website saya untuk memantau aktifitas website saya seperti terjadinya down atau mati. Saya membuatnya menggunakan [Upptime](https://upptime.js.org/) untuk membuatnya, ini sangat mudah karena tidak memerlukan hosting hanya perlu akun github
 
 Klik link [ini](https://uptime.vahryiskandar.my.id/) untuk melihat uptime saya
