--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -8,6 +8,8 @@ twitter: https://twitter.com/Abdulvaiz2
 github: https://github.com/DemuraAIdev/
 ---
 
+import { Skil } from '@/components/skil.js'
+
 # Bio
 
 I am a website developer, bot, graphic designer, and nft artist. I learned to make a website from 2019
