--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,6 +1,3 @@
 {
-  "description": "I am a website developer, bot, graphic designer, and nft artist. I learned to make a website from 2019",
-  "Live": "I live in",
-  "myfirstprogram": "My first programming language I learned was",
-  "workmost": "I work mostly with NextJS/Node and pure JS."
+  "description": "I am a website developer, bot, graphic designer, and nft artist. I learned to make a website from 2019"
 }
