--- a/locales/id/common.json
+++ b/locales/id/common.json
@@ -1,6 +1,3 @@
 {
-  "description": "Saya seorang developer situs web, bot, desainer grafis, dan artis nft. Saya belajar membuat situs web dari 2019",
-  "Live": "Saya tinggal di",
-  "myfirstprogram": "Bahasa pemrograman pertama yang saya pelajari adalah",
-  "workmost": "Saya bekerja sebagian besar dengan NextJS/Node dan JS pure"
+  "description": "Saya seorang developer situs web, bot, desainer grafis, dan artis nft. Saya belajar membuat situs web dari 2019"
 }
