--- a/data/authors/default.id.mdx
+++ b/data/authors/default.id.mdx
@@ -8,12 +8,17 @@ twitter: https://twitter.com/Abdulvaiz2
 github: https://github.com/DemuraAIdev/
 ---
 
-import { Skil } from '@/components/skil.js'
+import { Skil } from "@/components/skil.js";
 
 # Bio
 
 I am a website developer, bot, graphic designer, and nft artist. I learned to make a website from 2019
 I learned to use javascript in 2019, at that time I only used it to create a discord bot using libbrary discord.js. I'm currently learning to make nextjs.
+
+## Archive
+
+- [My Website](https://vahryiskandar.my.id)
+- [My Anime Fav](/anime)
 
 ## Time Line
 
