--- a/data/authors/default.id.mdx
+++ b/data/authors/default.id.mdx
@@ -12,44 +12,43 @@ import { Skil } from "@/components/skil.js";
 
 # Bio
 
-I am a website developer, bot, graphic designer, and nft artist. I learned to make a website from 2019
-I learned to use javascript in 2019, at that time I only used it to create a discord bot using libbrary discord.js. I'm currently learning to make nextjs.
+Saya seorang pengembang website, bot, desainer grafis, dan seniman NFT. Saya belajar membuat website sejak tahun 2019. Saya belajar menggunakan javascript pada tahun 2019, pada saat itu saya hanya menggunakannya untuk membuat bot discord menggunakan libbrary discord.js. Saat ini saya sedang belajar untuk membuat nextjs.
 
-## Archive
+## Arsip
 
 - [My Website](https://vahryiskandar.my.id)
 - [My Anime Fav](/anime)
 
-## Time Line
+## Time Line saya
 
 ### 2022
 
-- I learn NEXTJS (Now)
-- I created ZERON (Bot Discord)
+- Saya belajar NEXTJS (saat ini)
+- Saya menciptakan ZERON (Bot Discord)
 
 ### 2021
 
-- I created I.N.T.I Projects (Bot DIscord)
-- My first Discord server
-- I join discord.
-- My first Discord bot (I created using [Discord.JS](https://discord.js.org/)).
+- Saya menciptakan proyek I.N.T.I (Bot Discord)
+- Server Discord pertama saya
+- Saya bergabung dengan discord
+- Bot Discord pertama saya (saya membuatnya menggunakan [Discord.JS](https://discord.js.org/)).
 
 ### 2020
 
-- I'm learning javascript for the first time.
-- My first Discord server (CYBERTEAM).
-- I join discord.
+- Saya belajar javascript untuk pertama kalinya
+- Server Discord pertama saya (CYBERTEAM).
+- Saya bergabung dengan discord
 - COVID-19.
 
 ### 2019
 
-- I create myfirst website using html and css.
-- I learned my first HTML.
+- Saya membuat situs web pertama saya menggunakan html dan css.
+- Saya belajar HTML pertama saya.
 
 ### 2010
 
-- Moved out.
+- Pindah.
 
 ### 2XXX
 
-- 👶 Born and raised in Tangerang, Indonesia 🇮🇩.
+- 👶 Lahir dan besar di Tangerang, Indonesia 🇮🇩.
