--- a/data/blog/chatgpt.mdx
+++ b/data/blog/chatgpt.mdx
@@ -1,7 +1,7 @@
 ---
 title: "How Chat GPT is Changing the Game"
 date: "2022-12-21"
-tags: ["ai", "openai", "gpt"]
+tags: ["ai", "openai"]
 draft: false
 summary: Chat GPT is a natural language processing tool that helps chatbots generate human-like text. Based on the advanced GPT-3 model, Chat GPT allows for more natural and engaging conversations in real-time. It is widely used in customer service chatbots, virtual assistants, and conversational AI platforms.
 images: ["/static/images/openai.png"]
